k3s/Middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/version: 1.16.0
  name: helloworld-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /helloworld

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: helloworld
    app.kubernetes.io/name: helloworld
    app.kubernetes.io/version: 1.16.0
  name: helloworld
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.jpoblete.cl`) && Path(`/helloworld`)
      kind: Rule
      middlewares:
        - name: helloworld-stripprefix
      services:
        - name: helloworld
          port: 8080
